--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "this.$axios": "^0.18.0",
+    "@xkeshi/vue-qrcode": "^1.0.0",
     "babel-plugin-component": "^1.1.1",
     "element-ui": "^2.4.6",
     "iview": "^3.0.1",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
+    "this.$axios": "^0.18.0",
+    "v-distpicker": "^1.0.17",
     "vue": "^2.5.17",
     "vue-product-zoomer": "^2.0.11",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
